manifests/baseline-v1.3.1/bases/namespace/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ai-gateway
  labels:
    app.kubernetes.io/name: airgap-ai-gateway-platform
    app.kubernetes.io/part-of: ai-gateway
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
